tests/single_instruction_translation_validation/mcsema/register-variants/divl_r32/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:190:35: error: use of undefined value '@__remill_error'
  %21 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %20, %struct.Memory* %0) #21
                                  ^
0.02user 0.01system 0:00.04elapsed 109%CPU (0avgtext+0avgdata 27772maxresident)k
0inputs+16outputs (0major+3257minor)pagefaults 0swaps
